İframe desteği eklendi - X-Frame-Options düzeltildi, embed sayfası oluşturuldu

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,12 @@
   to = "/tarpovizyon.html"
   status = 200
 
+# Embed sayfası yönlendirmesi
+[[redirects]]
+  from = "/embed"
+  to = "/embed.html"
+  status = 200
+
 # Gemini API proxy route
 [[redirects]]
   from = "/api/gemini/chat"
@@ -43,10 +49,22 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    X-Frame-Options = "DENY"
+    X-Frame-Options = "SAMEORIGIN"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
+
+# İframe entegrasyonu için özel header
+[[headers]]
+  for = "/tarpovizyon.html"
+  [headers.values]
+    X-Frame-Options = "ALLOWALL"
+
+# Embed versiyonu için tamamen açık
+[[headers]]
+  for = "/embed/*"
+  [headers.values]
+    X-Frame-Options = ""
 
 # API fonksiyonları için CORS
 [[headers]]
